tests/org.eclipse.php.core.tests/workspace/errors/php54/testUnusedVariable2.pdtt
--TEST--
Test unused variable
--FILE--
<?php

function foo()
{
    static $static, $x;
    if (! isset($static)) {
        $static = 1;
    }
    return $static;
} 
?>
--EXPECT--
[line=5, start=44, end=46] Variable '$x' is never used